# saveknight-desktop

./: LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api.rs  config.rs  ludusavi.rs  main.rs  scanner.rs  uploader.rs
