[package]
name = "saveknight-desktop"
version = "1.0.0"
description = "SaveKnight Desktop - Automatic game save backup"
authors = ["SaveKnight"]
license = "MIT"
repository = "https://github.com/saveknight/saveknight-desktop"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "dialog-all", "fs-all", "path-all", "notification-all", "system-tray", "protocol-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
dirs = "5.0"
walkdir = "2.4"
zip = "0.6"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
keyring = "2.0"
regex = "1.10"
glob = "0.3"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
toml = "0.8"
once_cell = "1.19"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
